--- a/e-horse4/src/main/webapp/panier.xhtml
+++ b/e-horse4/src/main/webapp/panier.xhtml
@@ -39,7 +39,7 @@
 			<h:form>
 				<p:inputMask value="#{paMB.qtte}" />
 				<p:commandButton value="Modifier la quantité"
-					action="#{paMB.modifierQuantitePanier(pan.produit.idProduit)}" />
+					action="#{paMB.modifierQuantitePanier(pan.produit.idProduit)}" update="@all"/>
 			</h:form>
 		</p:column>
 		<p:column headerText="Supprimer">
